# openhire

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  server.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  company_request.yml  config.yml
design_handoff_openhire_v01/: README.md
design_handoff_openhire_v01/design_refs/: OpenHire Landing Page.dc.html  OpenHire Protocol Spec.dc.html  OpenHire v0.1 哨兵.dc.html  OpenHire 交互原型.dc.html  OpenHire 开聘协议.dc.html  openhire-mcp README.dc.html
docs/: maintainer-snapshot-refresh.md
reports/: 001-真机验收三件套.md  002-ClaudeDesktop-MCP配置注入.md  004-P0修复-写路径挂死.md  005-CLI真机体验7步单.md  006-M4打包与发布准备.md  007-发布日操作单.md  008-发布执行记录.md  009-Smithery提交确认单.md  010-目录提交策略与官方Registry材料.md  011-官方Registry发布执行记录.md  012-v0.2门面-README-Issues-About.md
src/openhire/: __init__.py  cli.py  client.py  config.py  console.py  errors.py  mcp_server.py  service.py
src/openhire/ats/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py
src/openhire/db/: __init__.py  migrate.py  models.py  schema.sql  session.py  types.py
src/openhire/pipeline/: __init__.py  apply_channels.py  backfill.py  crawler.py  extract.py  ghost_score.py  hashing.py  ingest.py  ranking.py  rebuild.py  seed_runner.py  (+1 more)
tests/: conftest.py  test_appendix_b.py  test_apply_channel.py  test_cli_journey.py  test_client.py  test_concurrency.py  test_extract.py  test_ghost_score.py  test_ingest.py  test_mcp_acceptance.py  test_posting_dates.py  test_privacy.py  test_ranking.py  test_rebuild.py  test_service.py  test_snapshot.py
(+2 files in other folders)
